recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:3: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:5: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:7: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:9: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:14: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:15: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:16: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:17: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:18: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:19: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:20: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:21: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^