recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	carre()
	gauche(90,0)
	carre()
	gauche(90,0)
	carre()
	gauche(90,0)
	carre()
	gauche(90,0)
}


def carre(){
	avance(100,0)
	gauche(90,0)
	avance(100,0)
	gauche(90,0)
	avance(100,0)
	gauche(90,0)
	avance(100,0)
	gauche(90,0)
	
}
